# PhotoCollage

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  TESTING.md  api_key  carres.py  client_secrets.json  columns.py  libpostermaker.py  photocollage  photopostergenerator  photopostergenerator.desktop  photopostergeneratorlib.py  postermaker-gtk.py  postermaker.py  postermaker.py.bak  pyproject.toml  settings.yaml  setup.cfg  setup.py  token.json  x.摘录.x
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
data/: photocollage.appdata.xml  photocollage.desktop  photopostergenerator.desktop
data/face_recognition/: __init__.py  face_features_extractor.py  face_recogniser.py  preprocessing.py
data/icons/: Makefile
data/model/: ModelCreator.py
data/pickle/: utils.py
data/processors/: ExifMetadataProcessor.py  ItemProcessor.py
data/processors/facedetection/: MultiCNNFaceRecognizer.py  constants.py  (+1 more)
data/rankers/: ImageRanker.py  RankerFactory.py
data/readers/: default.py
data/sqllite/: reader.py
images/: ImageWindow.py  PictureView.py
images/embeddings/: Resnet50Embedding.py
images/replacer/: BasicImageReplacer.py  ImageReplacer.py
images/resizer/: BasicImageProcessor.py  ImageProcessor.py  PILImageProcessor.py  WandImageMagickProcessor.py
images/utils/: __init__.py
photocollage/: .gtkgui.py.swp  .gtkgui_BASE_1055.py.swp  .gtkgui_LOCAL_1055.py.swp  .gtkgui_REMOTE_1055.py.swp  __init__.py  artwork.py  collage.py  config.py  generator.py  gtkgui.py  gtkgui_BACKUP_1055.py  render.py
photocollage/dialogs/: ConfigSelectorDialog.py  SettingsDialog.py
photocollage/settings/: PrintSettings.py
photocollagelib/: generator.py  gtkgui.py  version.py
photopostergeneratorlib/: generator.py  gtkgui.py  version.py
po/: POTFILES.in  cs.po  de.po  es.po  fr.po  it.po  nl.po  photocollage.pot  pl.po  pt-br.mo  ru.po  uk.po  zh_CN.mo  zh_CN.po
publish/: LuluLineItem.py  OrderDetails.py  lulu.py  test_lulu_apis.py
publish/cover/: CoverCreatorFactory.py
tests/: README.md  test_collage.py  test_config.py
util/: drive_utils.py  file_utils.py  utils.py
util/draw/: DashedImageDraw.py
util/tests/: test_utils.py
yearbook/: Corpus.py  Photograph.py  Yearbook.py
yearbook/page/: Page.py
yearbook/tests/: YearbookTests.py
(+27 files in other folders)
